Add auto-discovery support for Laravel 5.5
Here is the Laravel PR to add auto-discovery: [#19420](https://github.com/laravel/framework/pull/19420). This should work, unless I spelled something wrong.

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,13 @@
             "Muratbsts\\Reactable\\": "src/"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Muratbsts\\Reactable\\Providers\\ReactableServiceProvider"
+            ],   
+        }
+    },
     "require": {
         "illuminate/database": "^5.2.0",
         "illuminate/support": "^5.2.0"
